--- a/examen2doParcial_Robotica.ipynb
+++ b/examen2doParcial_Robotica.ipynb
@@ -863,6 +863,13 @@
    ]
   },
   {
+ "cell_type": "markdown",
+ "metadata": {},
+ "source": [
+  "Durante el desarrollo de esta práctica se logró implementar una trayectoria continua y suave para un robot tipo SCARA, aplicando perfiles de interpolación como el quíntico y una deformación senoidal en el plano. Esto permitió no solo observar el comportamiento del sistema desde MATLAB, sino también trasladarlo exitosamente a un entorno ROS 2 con visualización en RViz. Al comparar los resultados, se identificaron aspectos críticos relacionados con la coherencia entre el modelo cinemático y el modelo URDF del robot, lo que demuestra la importancia de una integración precisa entre teoría y simulación. Esta experiencia permitió reforzar conceptos de planificación de trayectorias y cinemática inversa, así como mejorar el criterio para evaluar movimientos físicamente factibles en robótica."
+  ]
+ },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
